--- a/BookStore/TableViewCell.xib
+++ b/BookStore/TableViewCell.xib
@@ -19,7 +19,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LyC-tj-Cfd">
                         <rect key="frame" x="0.0" y="0.0" width="322" height="44"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" id="c2j-3o-ioe">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="libro" id="c2j-3o-ioe">
                                 <rect key="frame" x="0.0" y="0.5" width="60" height="42.5"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -58,6 +58,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="libro" width="128" height="128"/>
     </resources>
 </document>
